fix(bs-templates): agenda action buttons should wrap on mobile device

--- a/public/bs-templates/templates/modal/_export.scss
+++ b/public/bs-templates/templates/modal/_export.scss
@@ -2,6 +2,7 @@
   &-container {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   &-form {
